Modelization notebook prepared to do all testes with models: pipeline and csvs with results to compare models created. Model Exportation created

--- a/modelization.ipynb
+++ b/modelization.ipynb
@@ -2,17 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from src.evaluation.evaluation import calculate_metrics\n",
-    "pd.options.display.float_format = '{:.2f}'.format\n",
-    "import numpy as np"
+    "from src.evaluation.evaluation import calculate_metrics, export_model\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn import tree, ensemble\n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "from src.modelization.models_utils import get_pipeline\n",
+    "from src.constants import BASE_PATH_EXPERIMENTS, PATH_EVALUATION_DF_WITH_METRICS_CSV, PATH_EVALUATION_CSV, PATH_TRAIN, PATH_TEST\n",
+    "from datetime import datetime\n",
+    "pd.options.display.float_format = '{:.2f}'.format"
    ]
   },
   {
@@ -21,19 +26,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv(r'output_data/df_train_util.csv')\n",
-    "df_test = pd.read_csv(r'output_data/df_test_util.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Call the calculate_metrics function\n",
-    "metrics_df, df_test_with_metrics = calculate_metrics(df_test['precio'], df_test['precio_mean_barrio'], df_test)\n",
-    "metrics_df.transpose().to_csv(r'output_data\\evaluation.csv')"
+    "#Read Data\n",
+    "df_train = pd.read_csv(PATH_TRAIN)\n",
+    "df_test = pd.read_csv(PATH_TEST)\n",
+    "evaluation_df_with_metrics = pd.read_csv(PATH_EVALUATION_DF_WITH_METRICS_CSV)\n",
+    "evaluation = pd.read_csv(PATH_EVALUATION_CSV)"
    ]
   },
   {
@@ -42,79 +39,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Any, List\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "columns_to_drop=['precio_unitario_m2', 'geometry', 'precio_logaritmico', 'barrio_id', 'barrio']\n",
+    "df_train = df_train.drop(columns=columns_to_drop)\n",
+    "df_test = df_test.drop(columns=columns_to_drop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Call the calculate_metrics function\n",
+    "baseline_model = 'Precio medio por barrio'\n",
+    "metrics_df, df_test_with_metrics = calculate_metrics(df_test['precio'], df_test['precio_mean_barrio'], df_test, model_name=baseline_model)\n",
+    "df_test_with_metrics['model_name'] = baseline_model\n",
+    "evaluation_df_with_metrics = pd.concat([evaluation_df_with_metrics, df_test_with_metrics], ignore_index=True)\n",
+    "evaluation =pd.concat([evaluation, metrics_df], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = df_train.drop(columns=['precio'])\n",
+    "y_train = df_train['precio']\n",
+    "X_test = df_test.drop(columns=['precio'])\n",
+    "y_test = df_test['precio']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\aimartins\\OneDrive - Parfois, SA\\Desktop\\MDS6\\MDS6-IDEALISTA\\.venv\\lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\aimartins\\OneDrive - Parfois, SA\\Desktop\\MDS6\\MDS6-IDEALISTA\\.venv\\lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\aimartins\\OneDrive - Parfois, SA\\Desktop\\MDS6\\MDS6-IDEALISTA\\.venv\\lib\\site-packages\\sklearn\\metrics\\_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\aimartins\\OneDrive - Parfois, SA\\Desktop\\MDS6\\MDS6-IDEALISTA\\.venv\\lib\\site-packages\\sklearn\\metrics\\_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "models_to_test = {'RandomForest': ensemble.RandomForestRegressor()}\n",
     "\n",
-    "def get_pipeline(\n",
-    "    base_model: Any,\n",
-    "    impute: bool,\n",
-    "    scale: bool,\n",
-    "    encode: bool,\n",
-    "    impute_model_cat: Any = SimpleImputer(strategy=\"most_frequent\"),\n",
-    "    impute_model_num: Any = SimpleImputer(strategy=\"median\"),\n",
-    "    scale_model: Any = StandardScaler(),\n",
-    "    encode_model: Any = OneHotEncoder(handle_unknown=\"ignore\", sparse_output=False),\n",
-    "    cat_features: List[str] = None,\n",
-    "    num_features: List[str] = None,\n",
-    ") -> Pipeline:\n",
-    "    \"\"\"\n",
-    "    Build a sklearn pipeline for preprocessing and modeling.\n",
-    "    :param base_model: Base model to be added at the end of the pipeline.\n",
-    "    :param impute: Indicates whether missing values imputation should be performed.\n",
-    "    :param scale: Indicates whether numerical feature scaling should be performed.\n",
-    "    :param encode: Indicates whether categorical feature encoding should be performed.\n",
-    "    :param impute_model_cat: Imputation model for categorical features.\n",
-    "      Default is SimpleImputer with strategy \"most_frequent\".\n",
-    "    :param impute_model_num: Imputation model for numerical features.\n",
-    "      Default is SimpleImputer with strategy \"median\".\n",
-    "    :param scale_model: Scaling model for numerical features.\n",
-    "      Default is StandardScaler.\n",
-    "    :param encode_model: Encoding model for categorical features.\n",
-    "      Default is OneHotEncoder with \"ignore\" handling for unknown values.\n",
-    "    :param cat_features: List of names of categorical features.\n",
-    "      Used to apply specific transformations to these features.\n",
-    "    :param num_features: List of names of numerical features.\n",
-    "      Used to apply specific transformations to these features.\n",
-    "    :Return: Sklearn pipeline that includes preprocessing steps and the base model.\n",
-    "\n",
-    "    \"\"\"\n",
-    "    # Create the list of transformers\n",
-    "    cat_transformers = []\n",
-    "    num_transformers = []\n",
-    "    if impute and cat_features:\n",
-    "        cat_transformers.append((\"imputer_cat\", impute_model_cat))\n",
-    "    if impute and num_features:\n",
-    "        num_transformers.append((\"imputer_num\", impute_model_num))\n",
-    "    if scale and num_features:\n",
-    "        num_transformers.append((\"scaler\", scale_model))\n",
-    "    if encode and cat_features:\n",
-    "        cat_transformers.append((\"encoder\", encode_model))\n",
-    "\n",
-    "    if not cat_transformers:\n",
-    "        cat_transformers.append((\"passthrough\", \"passthrough\"))\n",
-    "    if not num_transformers:\n",
-    "        num_transformers.append((\"passthrough\", \"passthrough\"))\n",
-    "\n",
-    "    numeric_transformer = Pipeline(\n",
-    "        steps=num_transformers,\n",
+    "for model_name, model in models_to_test.items():\n",
+    "    # Create pipeline\n",
+    "    pipeline = get_pipeline(\n",
+    "        base_model=model,\n",
+    "        impute=True,  \n",
+    "        scale=True,  \n",
+    "        encode=True,\n",
+    "        num_features=X_train.columns.to_list()\n",
     "    )\n",
-    "    categorical_transformer = Pipeline(\n",
-    "        steps=cat_transformers,\n",
-    "    )\n",
-    "    preprocessor = ColumnTransformer(\n",
-    "        transformers=[\n",
-    "            (\"num\", numeric_transformer, num_features),\n",
-    "            (\"cat\", categorical_transformer, cat_features),\n",
-    "        ],\n",
-    "        verbose_feature_names_out=False,\n",
+    "        \n",
+    "    # Fit the pipeline and make predictions\n",
+    "    pipeline.fit(X_train, y_train)\n",
+    "    y_pred = pipeline.predict(X_test)\n",
+    "    \n",
+    "    # Calculate metrics\n",
+    "    metrics_df, df_test_with_metrics = calculate_metrics(y_test, y_pred, df_test, model_name)\n",
+    "\n",
+    "    # Add model_name column to df_test_with_metrics\n",
+    "    df_test_with_metrics['model_name'] = model_name\n",
+    "    df_test_with_metrics['model_folder'] = f\"experiment_{model_name}_{datetime.now().strftime('%Y%m%d-%H%M%S')}\"\n",
+    "\n",
+    "    # Append df_test_with_metrics to all_df_test_with_metrics\n",
+    "    evaluation_df_with_metrics = pd.concat([evaluation_df_with_metrics, df_test_with_metrics], ignore_index=True)\n",
+    "\n",
+    "    # Append metrics_df to all_metrics_df\n",
+    "    evaluation =pd.concat([evaluation, metrics_df], ignore_index=True)\n",
+    "\n",
+    "    #Export Model\n",
+    "    output_folder = export_model(\n",
+    "    model=model,\n",
+    "    X_train=X_train,\n",
+    "    y_train=y_train,\n",
+    "    X_test=X_test,\n",
+    "    y_test=y_test,\n",
+    "    base_path=BASE_PATH_EXPERIMENTS,\n",
+    "    save_model=True,     \n",
+    "    save_datasets=True,  \n",
+    "    zip_files=True      \n",
     "    )\n",
     "\n",
-    "    pipeline = Pipeline(steps=[(\"preprocessor\", preprocessor), (\"model\", base_model)])\n",
-    "\n",
-    "    return pipeline"
+    "# Save the DataFrames to CSV files\n",
+    "evaluation.to_csv(PATH_EVALUATION_CSV, index=False)\n",
+    "evaluation_df_with_metrics.to_csv(PATH_EVALUATION_DF_WITH_METRICS_CSV, index=False)\n"
    ]
   },
   {
