--- a/modelization.ipynb
+++ b/modelization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "from sklearn import tree, ensemble\n",
     "import numpy as np\n",
     "import pickle\n",
+    "import os\n",
     "from src.modelization.models_utils import get_pipeline\n",
     "from src.constants import BASE_PATH_EXPERIMENTS, PATH_EVALUATION_DF_WITH_METRICS_CSV, PATH_EVALUATION_CSV, PATH_TRAIN, PATH_TEST\n",
     "from datetime import datetime\n",
@@ -22,15 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Read Data\n",
     "df_train = pd.read_csv(PATH_TRAIN)\n",
     "df_test = pd.read_csv(PATH_TEST)\n",
-    "evaluation_df_with_metrics = pd.read_csv(PATH_EVALUATION_DF_WITH_METRICS_CSV)\n",
-    "evaluation = pd.read_csv(PATH_EVALUATION_CSV)"
+    "if  os.path.exists(PATH_EVALUATION_DF_WITH_METRICS_CSV):\n",
+    "    evaluation_df_with_metrics = pd.read_csv(PATH_EVALUATION_DF_WITH_METRICS_CSV)\n",
+    "if  os.path.exists(PATH_EVALUATION_CSV):\n",
+    "    evaluation = pd.read_csv(PATH_EVALUATION_CSV)"
    ]
   },
   {
@@ -54,13 +57,19 @@
     "baseline_model = 'Precio medio por barrio'\n",
     "metrics_df, df_test_with_metrics = calculate_metrics(df_test['precio'], df_test['precio_mean_barrio'], df_test, model_name=baseline_model)\n",
     "df_test_with_metrics['model_name'] = baseline_model\n",
-    "evaluation_df_with_metrics = pd.concat([evaluation_df_with_metrics, df_test_with_metrics], ignore_index=True)\n",
-    "evaluation =pd.concat([evaluation, metrics_df], ignore_index=True)"
+    "\n",
+    "if not os.path.exists(PATH_EVALUATION_DF_WITH_METRICS_CSV):\n",
+    "    evaluation_df_with_metrics = pd.concat([evaluation_df_with_metrics, df_test_with_metrics], ignore_index=True)\n",
+    "    evaluation_df_with_metrics.to_csv(PATH_EVALUATION_DF_WITH_METRICS_CSV, index=False)\n",
+    "\n",
+    "if not os.path.exists(PATH_EVALUATION_CSV):\n",
+    "    evaluation =pd.concat([evaluation, metrics_df], ignore_index=True)\n",
+    "    evaluation.to_csv(PATH_EVALUATION_CSV, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,24 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\aimartins\\OneDrive - Parfois, SA\\Desktop\\MDS6\\MDS6-IDEALISTA\\.venv\\lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\aimartins\\OneDrive - Parfois, SA\\Desktop\\MDS6\\MDS6-IDEALISTA\\.venv\\lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\aimartins\\OneDrive - Parfois, SA\\Desktop\\MDS6\\MDS6-IDEALISTA\\.venv\\lib\\site-packages\\sklearn\\metrics\\_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\aimartins\\OneDrive - Parfois, SA\\Desktop\\MDS6\\MDS6-IDEALISTA\\.venv\\lib\\site-packages\\sklearn\\metrics\\_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "models_to_test = {'RandomForest': ensemble.RandomForestRegressor()}\n",
     "\n",
