FIX evaluation paths and add first experiment

--- a/modelization.ipynb
+++ b/modelization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,17 +59,19 @@
     "df_test_with_metrics['model_name'] = baseline_model\n",
     "\n",
     "if not os.path.exists(PATH_EVALUATION_DF_WITH_METRICS_CSV):\n",
+    "    evaluation_df_with_metrics=pd.DataFrame()\n",
     "    evaluation_df_with_metrics = pd.concat([evaluation_df_with_metrics, df_test_with_metrics], ignore_index=True)\n",
     "    evaluation_df_with_metrics.to_csv(PATH_EVALUATION_DF_WITH_METRICS_CSV, index=False)\n",
     "\n",
     "if not os.path.exists(PATH_EVALUATION_CSV):\n",
+    "    evaluation=pd.DataFrame()\n",
     "    evaluation =pd.concat([evaluation, metrics_df], ignore_index=True)\n",
     "    evaluation.to_csv(PATH_EVALUATION_CSV, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,9 +83,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\aimartins\\OneDrive - Parfois, SA\\Desktop\\MDS6\\MDS6-IDEALISTA\\.venv\\lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\aimartins\\OneDrive - Parfois, SA\\Desktop\\MDS6\\MDS6-IDEALISTA\\.venv\\lib\\site-packages\\sklearn\\base.py:486: UserWarning: X has feature names, but RandomForestRegressor was fitted without feature names\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\aimartins\\OneDrive - Parfois, SA\\Desktop\\MDS6\\MDS6-IDEALISTA\\.venv\\lib\\site-packages\\sklearn\\metrics\\_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\aimartins\\OneDrive - Parfois, SA\\Desktop\\MDS6\\MDS6-IDEALISTA\\.venv\\lib\\site-packages\\sklearn\\metrics\\_regression.py:483: FutureWarning: 'squared' is deprecated in version 1.4 and will be removed in 1.6. To calculate the root mean squared error, use the function'root_mean_squared_error'.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "models_to_test = {'RandomForest': ensemble.RandomForestRegressor()}\n",
     "\n",
@@ -131,13 +148,6 @@
     "evaluation.to_csv(PATH_EVALUATION_CSV, index=False)\n",
     "evaluation_df_with_metrics.to_csv(PATH_EVALUATION_DF_WITH_METRICS_CSV, index=False)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
