Change structure and construct ColumnTransformer to pipeline

--- a/exploratory_data_analysis.ipynb
+++ b/exploratory_data_analysis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,24 +61,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "df, df_ine, df_osm, df_pois, df_polygons = extract_initial_data(\n",
     "    root_dir=\"input_data\"\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Change columns names to friendly ones\n",
-    "df = df.drop(columns=[\"ADTYPOLOGY\", \"ADOPERATION\"])\n",
-    "df.columns = NEW_COLUMNS_NAMES"
    ]
   },
   {
@@ -90,15 +79,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.drop(columns=['precio']) \n",
-    "y = df['precio']\n",
+    "X = df.drop(columns=['PRICE']) \n",
+    "y = df['PRICE']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "df_train = pd.concat([X_train, y_train], axis=1)\n",
-    "df_test = pd.concat([X_test, y_test], axis=1)"
+    "df_train = pd.concat([y_train, X_train], axis=1)\n",
+    "df_test = pd.concat([y_test, X_test], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Change columns names to friendly ones\n",
+    "df_train.columns = NEW_COLUMNS_NAMES"
    ]
   },
   {
@@ -308,6 +307,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Once these variables are complementary ones, we can drop one of them\n",
+    "df[[\"buen_estado\", \"a_reformar\"]].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Feature Engineering: add new variables\n",
     "(\n",
     "    add_columns,\n",
@@ -344,6 +353,18 @@
     "df_train = df_train.drop(columns=REMOVE_COLUMNS_BY_CORRELATIONS)\n",
     "\n",
     "df_test = df_test.drop(columns=REMOVE_COLUMNS_BY_CORRELATIONS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for var in variables_most_correlated_w_target:\n",
+    "    hist_plot_outliers(\n",
+    "        df=df[df[var] > percentile_995_values[var]], name_variable=var\n",
+    "    )"
    ]
   },
   {
