--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -9,30 +9,14 @@
     "warnings.filterwarnings(\"ignore\")\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-09T16:03:40.430541Z",
-     "start_time": "2024-03-09T16:03:40.418152Z"
-    }
+    "collapsed": false
    },
    "id": "1b12f8d962269fbd",
-   "execution_count": 46
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'add_aggregated_features' from 'src.preprocessing.preprocessing' (C:\\Users\\aimartins\\OneDrive - Parfois, SA\\Desktop\\MDS6\\MDS6-IDEALISTA\\src\\preprocessing\\preprocessing.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mImportError\u001B[0m                               Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[52], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msrc\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpreprocessing\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mdata_extraction\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m extract_initial_data, get_info_from_polygons_and_ine\n\u001B[1;32m----> 2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msrc\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpreprocessing\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpreprocessing\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m (remove_duplicated_assets_id, \n\u001B[0;32m      3\u001B[0m                                              find_single_value_columns,\n\u001B[0;32m      4\u001B[0m                                              treatment_missing_values, \n\u001B[0;32m      5\u001B[0m                                              feature_engineering, \n\u001B[0;32m      6\u001B[0m                                              imputation_values_not_nulls,\n\u001B[0;32m      7\u001B[0m                                              detect_outliers_by_percentile,\n\u001B[0;32m      8\u001B[0m                                              add_aggregated_features)\n\u001B[0;32m      9\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msklearn\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmodel_selection\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m train_test_split\n\u001B[0;32m     10\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msrc\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mconstants\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m NEW_COLUMNS_NAMES, REMOVE_COLUMNS_BY_INPUT, REMOVE_COLUMNS_BY_CORRELATIONS\n",
-      "\u001B[1;31mImportError\u001B[0m: cannot import name 'add_aggregated_features' from 'src.preprocessing.preprocessing' (C:\\Users\\aimartins\\OneDrive - Parfois, SA\\Desktop\\MDS6\\MDS6-IDEALISTA\\src\\preprocessing\\preprocessing.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from src.preprocessing.data_extraction import extract_initial_data, get_info_from_polygons_and_ine\n",
     "from src.preprocessing.preprocessing import (remove_duplicated_assets_id, \n",
@@ -41,19 +25,16 @@
     "                                             feature_engineering, \n",
     "                                             imputation_values_not_nulls,\n",
     "                                             detect_outliers_by_percentile,\n",
-    "                                             add_aggregated_features)\n",
+    "                                             add_aggregated_features,\n",
+    "                                             correlation_values)\n",
     "from sklearn.model_selection import train_test_split\n",
     "from src.constants import NEW_COLUMNS_NAMES, REMOVE_COLUMNS_BY_INPUT, REMOVE_COLUMNS_BY_CORRELATIONS"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-09T16:07:29.887392Z",
-     "start_time": "2024-03-09T16:07:29.857052Z"
-    }
+    "collapsed": false
    },
    "id": "b2f53d1bf2603b44",
-   "execution_count": 52
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -200,7 +181,15 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns with only one distinct value: ['tipologia_imueble', 'operacion', 'ciudad', 'ADTYPOLOGY', 'ADOPERATION']\n"
+     ]
+    }
+   ],
    "source": [
     "# Remove columns that only have one different value\n",
     "remove_unique_value_columns = find_single_value_columns(df=df_train)\n",
@@ -216,10 +205,14 @@
     "df_train=df_train.drop(columns=REMOVE_COLUMNS_BY_CORRELATIONS)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-10T00:25:57.375504Z",
+     "start_time": "2024-03-10T00:25:54.727017Z"
+    }
    },
    "id": "dbedecc6c7134acd",
-   "execution_count": null
+   "execution_count": 20
   },
   {
    "cell_type": "code",
@@ -242,12 +235,36 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "correlation_matrix, _=correlation_values(df=df_train, threshold=0.8)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a272b397f6359fe9",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
     "df_train = add_aggregated_features(df=df_train, variable=\"barrio\")"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "9f63572f54c3c8ab",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "df_train.to_csv(r'output_data/df_train_util_v2.csv')"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c8550d58089b6a44",
    "execution_count": null
   }
  ],
